# HKIPcamera

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: HKIPcamera.h
include/incCn/: HCNetSDK.h
python_test/: test.py
src/: CMakeLists.txt  HKIPcamera.cpp  pyhk.cpp  python_module.cpp
